Added margins to notes-container class & font styling to notes class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
 .chart {
-height: 75vh;
+height: 95vh;
+/* padding: 0 0 10% 0; */
 }
+
+.notes {
+    /* padding: 5% 0 0 0; */
+    font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    color: grey;
+}
+
+.notes-container {
+    margin: 1% 5%;
+}
+
